--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en" class="focus-outline-visible"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <title>Skylith Status</title>
@@ -81,7 +80,7 @@
   </header>
 
   <div class="status-banner">
-    All systems operational — Last updated: <span id="lastUpdated">11/27/2025, 2:42:10 AM</span>
+    All systems operational — Last updated: <span id="lastUpdated">11/27/2025, 5:36:51 AM</span>
   </div>
 
   <table class="services">
@@ -128,18 +127,23 @@
     </tr>
     <tr>
       <td>Database Cluster</td>
-      <td><span class="status-icon status-down"></span>Service Disruption</td>
+      <td><span class="status-icon status-ok"></span>Operational</td>
     </tr>
   </tbody></table>
 
   <div class="incidents">
     <h3>Active Incident</h3>
-    <p>November 27, 2025 — Partial outage on Database Cluster</p>
+    <p>No active incidents reported.
+</p>
   </div>
 
   
 
-  <footer>
+  <div class="incidents">
+    <h3>Past Incidents</h3>
+    
+    <p><strong>November 27, 2025</strong> — Partial outage on Database Cluster (resolved)</p>
+  </div><footer>
     © <span id="year">2025</span> Skylith — Status Page
   </footer>
 
